working with the music dictionary