@@ -1,10 +1,15 @@
 package callete.api.util;
 
+import callete.api.services.music.model.Album;
+import javafx.scene.canvas.Canvas;
+import javafx.scene.canvas.GraphicsContext;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.imageio.ImageIO;
-import java.awt.*;
+import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.FilenameFilter;
 import java.io.IOException;
@@ -30,40 +35,44 @@ public class ImageCache {
     });
     for (File file : files) {
       String id = file.getName().substring(0, file.getName().length() - 4);
-      imageCache.put(id.toLowerCase(), file);
+      imageCache.put(id, file);
     }
+    LOG.info("Cache initialization finished: found " + imageCache.size() + " cached images");
   }
 
 
-//
-//  public static File createLazyLoadingImageCanvas(final String url) {
-//    try {
-//      if (imageCache.containsKey(id.toLowerCase())) {
-//        File image = imageCache.get(id.toLowerCase());
-//        imageUrl = image.toURI().toURL().toString();
-//      }
-//      else {
-//
-//        File target = new File(IMAGE_CACHE_DIR, id + ".png");
-//        ImageIO.write(image, "png", target);
-//        LOG.info("Written " + target.getAbsolutePath() + " to cache, URL: " + imageUrl);
-//        imageCache.put(id, target);
-//        imageUrl = target.toURI().toURL().toString();
-//
-//      }
-//    } catch (IOException e) {
-//      LOG.error("Error storing image to cache: " + e.getMessage());
-//    }
-//  }
+  public static Canvas loadCover(final Album album, final int width, final int height) {
+    return loadCached(album.getId(), album.getArtUrl(), width, height);
+  }
 
-  /**
-   * Creates an AWT image object from the given URL
-   * @param imageUrl the URL to create the image from
-   */
-  private Image load(String imageUrl) throws IOException {
-    imageUrl = imageUrl.replaceAll("http:https", "http"); //scale to used size
-    LOG.info("Caching " + imageUrl);
-    URL imgUrl = new URL(imageUrl);
-    return ImageIO.read(imgUrl);
+  public static Canvas loadCached(String id, String imageUrl, int width, int height) {
+    final Canvas canvas = new Canvas(width, height);
+    try {
+      if (imageCache.containsKey(id)) {
+        File image = imageCache.get(id);
+        imageUrl = image.toURI().toURL().toString();
+      }
+      else
+      {
+        imageUrl = imageUrl.replaceAll("http:https", "http"); //scale to used size
+        LOG.info("Caching " + imageUrl);
+        URL imgUrl = new URL(imageUrl);
+        BufferedImage image = ImageIO.read(imgUrl);
+        File target = new File(IMAGE_CACHE_DIR, id + ".png");
+        ImageIO.write(image, "png", target);
+        LOG.info("Written " + target.getAbsolutePath() + " to cache, URL: " + imageUrl);
+        imageCache.put(id, target);
+        imageUrl = target.toURI().toURL().toString();
+
+      }
+    } catch (IOException e) {
+      LOG.error("Error storing image to cache: " + e.getMessage());
+    }
+
+    ImageView img = new ImageView(new Image(imageUrl, width, height, false, true));
+    final GraphicsContext gc = canvas.getGraphicsContext2D();
+    gc.drawImage(img.getImage(), 1, 1);
+    gc.rect(0, 0, width, height);
+    return canvas;
   }
 }
